test-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nfs-test
  template:
    metadata:
      labels:
        app: nfs-test
    spec:
      containers:
        - name: nginx
          image: nginx
          volumeMounts:
            - name: my-storage
              mountPath: /usr/share/nginx/html
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
      volumes:
        - name: my-storage
          persistentVolumeClaim:
            claimName: nfs-test-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nfs-test
  namespace: default
  labels:
    app: nfs-test
spec:
  type: ClusterIP
  selector:
    app: nfs-test
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  sessionAffinity: None
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nfs-test-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: test.akikungz.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nfs-test
                port:
                  number: 80
